syntax = "proto3";

package chat_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/olezhek28/microservices_course/week_1/grpc/pkg/note_v1";

service ChatV1{
rpc CreateChat(CreateChatRequest) returns(CreateChatResponse);
rpc DeleteChat(DeleteChatRequest) returns (DeleteChatResponse);
rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
}

message CreateChatRequest {
    string usernames = 1; 
}


message CreateChatResponse{
    int64 id = 1;
}
 

message DeleteChatRequest{
    int64 id =1;
}

message DeleteChatResponse{
    google.protobuf.Empty empty = 1;
}

message SendMessageRequest{
    string from = 1;
    string text = 2;
    google.protobuf.Timestamp timestamp = 3;
}

message SendMessageResponse{
    google.protobuf.Empty empty = 1;
}
